# poetry-todo-api

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: main.py
app/auth/: crud.py  models.py  schemas.py  views.py
app/core/: config.py  db.py  security.py
app/core/utils/: deps.py  generic_models.py  logger.py  uuid6.py
app/health/: crud.py  models.py  views.py
app/todo/: crud.py  models.py  schemas.py  views.py
tests/: conftest.py  test_main.py
tests/test_auth/: test_views.py
tests/test_todos/: test_views.py
tests/utils/: auth.py  helpers.py
